# s9gf4ult.github.io

./: .gitignore  .gitmodules  .stylish-haskell.yaml  about.markdown  archive.html  blog.cabal  bump.sh  default.nix  index.html  projects.markdown  release.nix  rewatch.sh  site.hs  stack.yaml  tags.html
css/: default.css  fonts.css  pandoc.css
nix/: sources.json
posts/: 2015-08-12-spqr.markdown  2020-01-20-nixos-config-template-considerations.html  2020-01-20-nixos-config-template-considerations.markdown
tags/: nixos.html
templates/: default.html  en.html  index.html  post.html
